--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "mongoose-aggregate-paginate": "^2.0.2",
     "mongoose-paginate": "^5.0.3",
     "multer": "^1.4.5-lts.1",
+    "multer-storage-cloudinary": "^4.0.0",
     "nodemon": "^2.0.20",
     "otp-generators": "^1.0.3",
     "path": "^0.12.7",
