--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "mongoose": "^6.10.0",
     "mongoose-aggregate-paginate": "^2.0.2",
     "mongoose-paginate": "^5.0.3",
+    "mongoose-paginate-v2": "^1.8.2",
     "multer": "^1.4.5-lts.1",
     "multer-storage-cloudinary": "^4.0.0",
     "nodemon": "^2.0.20",
