--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "express": "^4.19.2",
     "express-validator": "^7.1.0",
     "http-errors": "^2.0.0",
+    "ifsc": "^2.0.27",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.4.3",
     "mongoose-aggregate-paginate": "^2.0.2",
